--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
         <title>Scheme</title>
     </head>
     <body>
+              <script>
+        var tour = new Tour({
+    steps: [
+    {
+      element: "#govern",
+      title: "Title of site",
+      content: "this wesite is a package of different ministry of india in animated form"
+    },
+  
+    {
+      element: "#vishal",
+      title: "Ministry of transportation",
+      content: "Here you can submit your query related to transportation to government of india"
+    },
+            {
+      element: "#first-circle",
+      title: "Ministry of Power and energy",
+      content: "Here you can submit your query related to power and energy to government of india"
+    }
+  ]});
+  
+  // Initialize the tour
+  tour.init();
+  
+  // Start the tour
+  tour.start();
+</script>
     <h1 align="center">Government Scheme</h1>
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 680 600"> 
 
